crates/fs-gui-workspace/tests/snapshots/snapshots__theme_animations_css_snapshot.snap
---
source: crates/fs-gui-workspace/tests/snapshots.rs
assertion_line: 27
expression: css
---
/* FreeSynergy animation utilities.
   Depends on CSS variables emitted by ThemeEngine::to_css().             */

@keyframes fadeInUp {
    from { opacity: 0; transform: translateY(12px); }
    to   { opacity: 1; transform: translateY(0); }
}

@keyframes slideInRight {
    from { opacity: 0; transform: translateX(24px); }
    to   { opacity: 1; transform: translateX(0); }
}

@keyframes skeletonPulse {
    0%, 100% { opacity: 0.4; }
    50%       { opacity: 0.8; }
}

.fs-fade-in-up {
    animation: fadeInUp var(--transition-base, 250ms) ease-out both;
}

.fs-slide-in-right {
    animation: slideInRight var(--transition-base, 250ms) ease-out both;
}

.fs-skeleton {
    animation: skeletonPulse 1.5s ease-in-out infinite;
    background: var(--bg-surface);
    border-radius: 4px;
}

@media (prefers-reduced-motion: reduce) {
    .fs-fade-in-up,
    .fs-slide-in-right { animation: none; }
    .fs-skeleton        { animation: none; }
}
