crates/fs-gui-workspace/tests/snapshots/snapshots__theme_css_vars_snapshot.snap
---
source: crates/fs-gui-workspace/tests/snapshots.rs
assertion_line: 9
expression: css
---
:root {
  --primary:        #00BCD4;
  --primary-hover:  #26C6DA;
  --primary-text:   #000000;
  --secondary:      #ffffff;
  --bg-base:        #0d1117;
  --bg-surface:     #161b22;
  --bg-sidebar:     #0f3460;
  --text-primary:   #e6edf3;
  --text-secondary: #8b949e;
  --text-muted:     #484f58;
  --success:        #3fb950;
  --warning:        #d29922;
  --error:          #f85149;
  --border-default: #30363d;
  --border-focus:   #00BCD4;
  --font-family:    "JetBrains Mono", "Fira Code", monospace;
  --font-size:      14px;
  --line-height:    1.6;
  --spacing-xs:     4px;
  --spacing-sm:     8px;
  --spacing-md:     16px;
  --spacing-lg:     24px;
  --spacing-xl:     32px;
  --transition-fast: 150ms;
  --transition-base: 250ms;
  --transition-slow: 400ms;
  --shadow-sm:      0 1px 3px rgba(0,0,0,0.4);
  --shadow-md:      0 4px 12px rgba(0,0,0,0.5);
  --shadow-lg:      0 8px 24px rgba(0,0,0,0.6);
  --shadow-xl:      0 16px 48px rgba(0,0,0,0.7);
  --glass-bg-opacity:     0.08;
  --glass-blur:           12px;
  --glass-border-opacity: 0.15;
}
