crates/fs-gui-workspace/tests/snapshots/snapshots__theme_glass_css_snapshot.snap
---
source: crates/fs-gui-workspace/tests/snapshots.rs
assertion_line: 21
expression: css
---
/* Glassmorphism utility classes for FreeSynergy.Desktop.
   Depends on CSS variables emitted by ThemeEngine::to_css().             */

.glass {
    background: rgba(22, 27, 34, var(--glass-bg-opacity, 0.08));
    backdrop-filter: blur(var(--glass-blur, 12px));
    -webkit-backdrop-filter: blur(var(--glass-blur, 12px));
    border: 1px solid rgba(48, 54, 61, var(--glass-border-opacity, 0.15));
    border-radius: 12px;
}

.glass-card {
    background: rgba(22, 27, 34, var(--glass-bg-opacity, 0.08));
    backdrop-filter: blur(var(--glass-blur, 12px));
    -webkit-backdrop-filter: blur(var(--glass-blur, 12px));
    border: 1px solid rgba(48, 54, 61, var(--glass-border-opacity, 0.15));
    border-radius: 16px;
    padding: var(--spacing-md, 16px);
    box-shadow: var(--shadow-md);
}

.glass-sidebar {
    background: rgba(15, 52, 96, var(--glass-bg-opacity, 0.08));
    backdrop-filter: blur(var(--glass-blur, 12px));
    -webkit-backdrop-filter: blur(var(--glass-blur, 12px));
    border-right: 1px solid rgba(48, 54, 61, var(--glass-border-opacity, 0.15));
}

@media (prefers-contrast: more) {
    .glass,
    .glass-card,
    .glass-sidebar {
        background: var(--bg-surface);
        backdrop-filter: none;
        -webkit-backdrop-filter: none;
        border: 2px solid var(--border-default);
        box-shadow: none;
    }
}
